Fix translation issues for non-legacy messages
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/gamemode.properties
+++ b/util/src/main/i18n/templates/gamemode.properties
@@ -239,10 +239,10 @@ blitz.livesRemaining = You have {0} remaining.
 # {0} = "Blitz"
 blitz.joinDenied = You may not join during a {0} match.
 
-blitz.victoryCondition = most survivors
+victoryCondition.blitz = most survivors
 
-goals.victoryCondition = most objectives
+victoryCondition.goals = most objectives
 
-tie.victoryCondition = nobody wins
+victoryCondition.tie = nobody wins
 
-score.victoryCondition = highest score
+victoryCondition.score = highest score
