Reorganize changes as /vote command
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/map.properties
+++ b/util/src/main/i18n/templates/map.properties
@@ -68,6 +68,11 @@ map.setVote.existing = {0} has already been added to the custom vote
 # {0} = player name (who cleared the map selection)
 map.setVote.clear = {0} has cleared the custom vote selection
 
+# {0} = map name
+map.setVote.notFound = {0} could not be removed since it was never added
+
+map.setVote.existing = Voting selection can not be modified at this time
+
 map.setVote.limit = Map limit for the custom vote has been reached
 
 map.setVote.list = Selected Maps
