Fix duplicate translation
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/map.properties
+++ b/util/src/main/i18n/templates/map.properties
@@ -71,7 +71,7 @@ map.setVote.clear = {0} has cleared the custom vote selection
 # {0} = map name
 map.setVote.notFound = {0} could not be removed since it was never added
 
-map.setVote.existing = Voting selection can not be modified at this time
+map.setVote.inProgress = Voting selection can not be modified at this time
 
 map.setVote.limit = Map limit for the custom vote has been reached
 
