--- a/util/src/main/i18n/templates/map.properties
+++ b/util/src/main/i18n/templates/map.properties
@@ -54,29 +54,6 @@ map.setNext.confirm = You may not set the next map when a restart is queued. Use
 # {1} = name of map that was unset
 map.setNext.revert = {0} has removed {1} as the next map
 
-# {0} = player name (who added the map)
-# {1} = map name 
-map.setVote.addMap = {0} added {1} to the custom vote
-
-# {0} = player name (who removed the map)
-# {1} = map name 
-map.setVote.removeMap = {0} removed {1} from the custom vote
-
-# {0} = map name
-map.setVote.existing = {0} has already been added to the custom vote
-
-# {0} = player name (who cleared the map selection)
-map.setVote.clear = {0} has cleared the custom vote selection
-
-# {0} = map name
-map.setVote.notFound = {0} could not be removed since it was never added
-
-map.setVote.inProgress = Voting selection can not be modified at this time
-
-map.setVote.limit = Map limit for the custom vote has been reached
-
-map.setVote.list = Selected Maps
-
 map.noNextMap = No next map
 
 # {0} = map name
@@ -144,3 +121,27 @@ vote.against = Voted against {0}
 vote.abstain = Removed your vote for {0}
 
 vote.disabled = Voting is disabled
+
+# {0} = player name (who added the map)
+# {1} = map name 
+vote.custom.add = {0} added {1} to the custom vote
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+vote.custom.remove = {0} removed {1} from the custom vote
+
+# {0} = map name
+vote.custom.existing = {0} has already been added to the custom vote
+
+# {0} = player name (who cleared the map selection)
+vote.custom.clear = {0} has cleared the custom vote selection
+
+# {0} = map name
+vote.custom.notFound = {0} could not be removed since it was never added
+
+vote.custom.inProgress = Voting selection can not be modified at this time
+
+vote.custom.limit = Map limit for the custom vote has been reached
+
+vote.custom.list = Selected Maps
+
