Add /vote command
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/map.properties
+++ b/util/src/main/i18n/templates/map.properties
@@ -119,3 +119,18 @@ vote.against = Voted against {0}
 
 # {0} = option name (e.g. "Airship Battle")
 vote.abstain = Removed your vote for {0}
+
+vote.disabled = Voting is disabled
+
+# {0} = player name (who added the map)
+# {1} = map name 
+vote.add = {0} added {1} to the vote
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+vote.remove = {0} removed {1} from the vote
+
+vote.limit = Selection limit for the vote has been reached
+
+vote.title.map = Selected Maps
+
