Update Romanian translations

--- a/util/src/main/i18n/translations/map_ro_RO.properties
+++ b/util/src/main/i18n/translations/map_ro_RO.properties
@@ -107,7 +107,6 @@ pool.mapPoolsDisabled = Mulțimile de hărți sunt dezactivate momentan
 
 vote.noVote = Nu este nimic de votat momentan
 
-vote.title.map = Vot pentru hartă
 
 vote.header.map = Fă clic pe toate hărțile pe care vrei să le joci\:
 
@@ -119,3 +118,13 @@ vote.against = Ai votat împotriva {0}
 
 # {0} = option name (e.g. "Airship Battle")
 vote.abstain = Ți-ai retras votul pentru {0}
+
+
+# {0} = player name (who added the map)
+# {1} = map name 
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+
+
+
