Update Spanish, Mexico translations

--- a/util/src/main/i18n/translations/misc_es_MX.properties
+++ b/util/src/main/i18n/translations/misc_es_MX.properties
@@ -92,7 +92,7 @@ misc.team = Equipo
 # A choice with two options (e.g. 1 hour or 5 matches)
 # {0} = the first option
 # {1} = the second option
-misc.or = {0} ó {1}
+misc.or = {0} o {1}
 
 # do not translate, keep as-is
 misc.snowman = ☃
@@ -178,9 +178,9 @@ type.duration = duración
 
 type.vector = vector (x,y,z)
 
-type.chunk = vector (x,z)
+type.chunk = vector (x,y)
 
-type.version = versión (x.y.z)
+type.version = versión (x,y,z)
 
 type.gamemode = modo de juego
 
