Update Chinese Simplified translations

--- a/util/src/main/i18n/translations/map_zh_CN.properties
+++ b/util/src/main/i18n/translations/map_zh_CN.properties
@@ -89,3 +89,13 @@ map.protectPortal = 您不能妨碍这个区域
 # {0} = option name (e.g. "Airship Battle")
 
 # {0} = option name (e.g. "Airship Battle")
+
+
+# {0} = player name (who added the map)
+# {1} = map name 
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+
+
+
