--- a/util/src/main/i18n/translations/map_pt_BR.properties
+++ b/util/src/main/i18n/translations/map_pt_BR.properties
@@ -88,3 +88,13 @@ map.protectPortal = Você não pode obstruir esta área
 # {0} = option name (e.g. "Airship Battle")
 
 # {0} = option name (e.g. "Airship Battle")
+
+
+# {0} = player name (who added the map)
+# {1} = map name 
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+
+
+
