--- a/util/src/main/i18n/translations/map_es_CL.properties
+++ b/util/src/main/i18n/translations/map_es_CL.properties
@@ -107,7 +107,7 @@ pool.mapPoolsDisabled = Las pools de mapas están desactivadas
 
 vote.noVote = No hay nada que votar ahora mismo
 
-vote.title.map = Votacion de mapas
+vote.title.map = Mapas seleccionados
 
 vote.header.map = Haz clic en todos los mapas que quieras jugar\:
 
@@ -119,3 +119,17 @@ vote.against = Has votado contra {0}
 
 # {0} = option name (e.g. "Airship Battle")
 vote.abstain = Has eliminado tu voto para {0}
+
+vote.disabled = Las votaciones están deshabilitadas
+
+# {0} = player name (who added the map)
+# {1} = map name 
+vote.add = {0} ha añadido {1} a la votación
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+vote.remove = {0} ha quitado {1} de la votación
+
+vote.limit = Se ha alcanzado el límite de selección por votación
+
+
