Update English, United Kingdom translations

--- a/util/src/main/i18n/translations/map_en_GB.properties
+++ b/util/src/main/i18n/translations/map_en_GB.properties
@@ -107,7 +107,7 @@ pool.mapPoolsDisabled = Map pools are currently disabled
 
 vote.noVote = There is nothing to vote for right now
 
-vote.title.map = Map Vote
+vote.title.map = Selected Maps
 
 vote.header.map = Click on all of the maps you want to play\:
 
@@ -119,3 +119,17 @@ vote.against = Voted against {0}
 
 # {0} = option name (e.g. "Airship Battle")
 vote.abstain = Removed your vote for {0}
+
+vote.disabled = Voting is disabled
+
+# {0} = player name (who added the map)
+# {1} = map name 
+vote.add = {0} added {1} to the vote
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+vote.remove = {0} removed {1} from the vote
+
+vote.limit = Selection limit for the vote has been reached
+
+
