Update Tagalog translations

--- a/util/src/main/i18n/translations/map_tl_PH.properties
+++ b/util/src/main/i18n/translations/map_tl_PH.properties
@@ -75,3 +75,13 @@ map.info.rules = Patakaran
 # {0} = option name (e.g. "Airship Battle")
 
 # {0} = option name (e.g. "Airship Battle")
+
+
+# {0} = player name (who added the map)
+# {1} = map name 
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+
+
+
