--- a/util/src/main/i18n/translations/map_en_PT.properties
+++ b/util/src/main/i18n/translations/map_en_PT.properties
@@ -85,3 +85,13 @@ map.protectPortal = Ye can't be blockin' this off laddy
 # {0} = option name (e.g. "Airship Battle")
 
 # {0} = option name (e.g. "Airship Battle")
+
+
+# {0} = player name (who added the map)
+# {1} = map name 
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+
+
+
