Update Swedish translations

--- a/util/src/main/i18n/translations/map_sv_SE.properties
+++ b/util/src/main/i18n/translations/map_sv_SE.properties
@@ -105,7 +105,6 @@ pool.mapPoolsDisabled = Kartpooler är för närvarande inaktiverade
 
 vote.noVote = Det finns inget att rösta för just nu
 
-vote.title.map = Kartröstning
 
 vote.header.map = Klicka på alla kartor du vill spela\:
 
@@ -117,3 +116,13 @@ vote.against = Röstade mot {0}
 
 # {0} = option name (e.g. "Airship Battle")
 vote.abstain = Tog bort din röst på {0}
+
+
+# {0} = player name (who added the map)
+# {1} = map name 
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+
+
+
