--- a/util/src/main/i18n/translations/map_pl_PL.properties
+++ b/util/src/main/i18n/translations/map_pl_PL.properties
@@ -94,3 +94,13 @@ pool.mapPoolsDisabled = Baseny map są obecnie wyłączone
 # {0} = option name (e.g. "Airship Battle")
 
 # {0} = option name (e.g. "Airship Battle")
+
+
+# {0} = player name (who added the map)
+# {1} = map name 
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+
+
+
