Update French translations

--- a/util/src/main/i18n/translations/map_fr_FR.properties
+++ b/util/src/main/i18n/translations/map_fr_FR.properties
@@ -105,7 +105,6 @@ pool.mapPoolsDisabled = Les maps pools sont actuellement désactivées
 
 vote.noVote = Il n'y a rien sur quoi voter actuellement
 
-vote.title.map = Map Vote
 
 vote.header.map = Cliquez sur toutes les maps que vous souhaitez jouer \:
 
@@ -117,3 +116,13 @@ vote.against = Voté contre {0}
 
 # {0} = option name (e.g. "Airship Battle")
 vote.abstain = Vote pour {0} supprimé
+
+
+# {0} = player name (who added the map)
+# {1} = map name 
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+
+
+
