Update Danish translations

--- a/util/src/main/i18n/translations/map_da_DK.properties
+++ b/util/src/main/i18n/translations/map_da_DK.properties
@@ -87,3 +87,13 @@ map.protectPortal = Du kan ikke blokere dette område
 # {0} = option name (e.g. "Airship Battle")
 
 # {0} = option name (e.g. "Airship Battle")
+
+
+# {0} = player name (who added the map)
+# {1} = map name 
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+
+
+
