Update Afrikaans translations

--- a/util/src/main/i18n/translations/map_af_ZA.properties
+++ b/util/src/main/i18n/translations/map_af_ZA.properties
@@ -86,3 +86,13 @@ map.protectPortal = Jy mag nie hierdie area belemmer
 # {0} = option name (e.g. "Airship Battle")
 
 # {0} = option name (e.g. "Airship Battle")
+
+
+# {0} = player name (who added the map)
+# {1} = map name 
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+
+
+
