Update Arabic translations

--- a/util/src/main/i18n/translations/map_ar_SA.properties
+++ b/util/src/main/i18n/translations/map_ar_SA.properties
@@ -88,3 +88,13 @@ map.protectPortal = أنت لا تستطيع أن تخرب هذه المنطقة
 # {0} = option name (e.g. "Airship Battle")
 
 # {0} = option name (e.g. "Airship Battle")
+
+
+# {0} = player name (who added the map)
+# {1} = map name 
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+
+
+
