Update Catalan translations

--- a/util/src/main/i18n/translations/map_ca_ES.properties
+++ b/util/src/main/i18n/translations/map_ca_ES.properties
@@ -96,7 +96,6 @@ pool.noMapPools = No hi ha cap agrupació de mapes carregats
 pool.mapPoolsDisabled = Els grups de mapes estan actualment desactivats
 
 
-vote.title.map = Vota el mapa
 
 
 # {0} = option name (e.g. "Airship Battle")
@@ -104,3 +103,13 @@ vote.title.map = Vota el mapa
 # {0} = option name (e.g. "Airship Battle")
 
 # {0} = option name (e.g. "Airship Battle")
+
+
+# {0} = player name (who added the map)
+# {1} = map name 
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+
+
+
