Update Norwegian translations

--- a/util/src/main/i18n/translations/map_no_NO.properties
+++ b/util/src/main/i18n/translations/map_no_NO.properties
@@ -96,3 +96,13 @@ pool.noRotation = Ingen rekkefølge er i bruk for øyeblikket
 # {0} = option name (e.g. "Airship Battle")
 
 # {0} = option name (e.g. "Airship Battle")
+
+
+# {0} = player name (who added the map)
+# {1} = map name 
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+
+
+
