--- a/util/src/main/i18n/translations/map_de_DE.properties
+++ b/util/src/main/i18n/translations/map_de_DE.properties
@@ -107,7 +107,6 @@ pool.mapPoolsDisabled = Map-Pools sind derzeit deaktiviert
 
 vote.noVote = Momentan gibt es keine Abstimmung
 
-vote.title.map = Map-Abstimmung
 
 vote.header.map = Klick auf alle Maps, die du spielen möchtest\:
 
@@ -119,3 +118,13 @@ vote.against = Gegen {0} gestimmt
 
 # {0} = option name (e.g. "Airship Battle")
 vote.abstain = Deine Stimme für {0} wurde entfernt
+
+
+# {0} = player name (who added the map)
+# {1} = map name 
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+
+
+
