Update Japanese translations

--- a/util/src/main/i18n/translations/map_ja_JP.properties
+++ b/util/src/main/i18n/translations/map_ja_JP.properties
@@ -84,3 +84,13 @@ map.protectPortal = この領域を妨害することはできません
 # {0} = option name (e.g. "Airship Battle")
 
 # {0} = option name (e.g. "Airship Battle")
+
+
+# {0} = player name (who added the map)
+# {1} = map name 
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+
+
+
