Update LOLCAT translations

--- a/util/src/main/i18n/translations/map_lol_US.properties
+++ b/util/src/main/i18n/translations/map_lol_US.properties
@@ -107,7 +107,7 @@ pool.mapPoolsDisabled = Mawp poolz ar currnly disabld
 
 vote.noVote = Nuthin to voet 4 naw, come back latr
 
-vote.title.map = Map voet
+vote.title.map = selctd mawps
 
 vote.header.map = Punch all of da maps u wantz to play\:
 
@@ -119,3 +119,17 @@ vote.against = Votd agianst {0} >\:D
 
 # {0} = option name (e.g. "Airship Battle")
 vote.abstain = Remoevd ur voet 4 {0}
+
+vote.disabled = Votationz r nono
+
+# {0} = player name (who added the map)
+# {1} = map name 
+vote.add = {0} maed {1} part ov vote
+
+# {0} = player name (who removed the map)
+# {1} = map name 
+vote.remove = {0} removd {1} frawm vote
+
+vote.limit = Selecchun limiwt 4 da voet has ben raechd
+
+
