Update Korean translations

--- a/util/src/main/i18n/translations/gamemode_ko_KR.properties
+++ b/util/src/main/i18n/translations/gamemode_ko_KR.properties
@@ -202,7 +202,7 @@ flag.capture.player = {0}이(가) {1}에 의해서 점령당하였습니다.
 flag.capture.you = {0}을(를) 캡쳐하였습니다
 
 # {0} = flag name
-flag.captureDenied = {0}는 획득이 가능 할 때 점령이 가능할 것 입니다.
+flag.captureDenied = {0}는 획득이 가능할 때 점령이 가능할 것입니다
 
 # {0} = flag name
 flag.return = {0}이(가) 다시 돌아왔습니다
@@ -218,6 +218,7 @@ flag.willRespawn.named = {0}이(가) {2} 후에 {1}에서 재생성됩니다
 
 # {0} = flag name
 # {1} = post name
+flag.willRespawn.next = {0}이(가) 다음에 {1}에서 재생성됩니다
 
 # {0} = flag name
 flag.respawn = {0}이(가) 다시 생성되었습니다
