Update Korean translations

--- a/util/src/main/i18n/translations/map_ko_KR.properties
+++ b/util/src/main/i18n/translations/map_ko_KR.properties
@@ -107,6 +107,7 @@ pool.mapPoolsDisabled = 맵 풀(Map pools)이 현재 비활성화되었습니다
 
 vote.noVote = 현재 진행되는 투표가 없습니다
 
+vote.title.map = 맵 선택됨
 
 vote.header.map = 플레이하고 싶은 맵을 모두 클릭하세요\:
 
@@ -119,12 +120,16 @@ vote.against = {0}에 반대 투표를 하였습니다
 # {0} = option name (e.g. "Airship Battle")
 vote.abstain = {0}에 대한 투표를 취소했습니다
 
+vote.disabled = 투표가 비활성화됨
 
 # {0} = player name (who added the map)
 # {1} = map name 
+vote.add = {0}이(가) {1}에 투표했습니다
 
 # {0} = player name (who removed the map)
 # {1} = map name 
+vote.remove = {0}이(가) {1}에 투표를 취소했습니다
 
+vote.limit = 투표 선택 한도에 도달했습니다
 
 
