--- a/util/src/main/i18n/translations/misc_ko_KR.properties
+++ b/util/src/main/i18n/translations/misc_ko_KR.properties
@@ -92,6 +92,7 @@ misc.team = 팀
 # A choice with two options (e.g. 1 hour or 5 matches)
 # {0} = the first option
 # {1} = the second option
+misc.or = {0} 또는 {1}
 
 # do not translate, keep as-is
 misc.snowman = ☃
