Update Korean translations

--- a/util/src/main/i18n/translations/moderation_ko_KR.properties
+++ b/util/src/main/i18n/translations/moderation_ko_KR.properties
@@ -38,6 +38,7 @@ moderation.screen.signoff = {0}에 의해 발표됨
 moderation.screen.expires = {0} 후 만료
 
 # {0} = mute reason
+moderation.mute.message = {0} 이유로 채팅 금지가 되었습니다
 
 moderation.mute.list = 채팅 금지된 플레이어 목록
 
