Update Spanish, Chile translations

--- a/util/src/main/i18n/translations/misc_es_CL.properties
+++ b/util/src/main/i18n/translations/misc_es_CL.properties
@@ -162,7 +162,7 @@ misc.leave = {0} salió
 # {0} = player name
 misc.leave.quiet = {0} abandonó la partida silenciosamente
 
-misc.incorrectWorld = ¡Uh oh\! Hemos tenido un error. Por favor prueba relogueando.
+misc.incorrectWorld = Uh oh\! Hemos tenido un error. Por favor prueba relogueando.
 
 misc.serverFull = El servidor está lleno. ¡Considera mejorar a premium para poder unirte mientras lo está\!
 
