Update Spanish, Chile translations

--- a/util/src/main/i18n/translations/ui_es_CL.properties
+++ b/util/src/main/i18n/translations/ui_es_CL.properties
@@ -102,7 +102,7 @@ picker.windowTitle.team = Elige tu equipo
 
 picker.windowTitle.class = Elige tu clase
 
-picker.autoJoin.displayName = Selección automática
+picker.autoJoin.displayName = Auto Join
 
 picker.autoJoin.tooltip = Te asigna al equipo con la menor cantidad de jugadores
 
