--- a/util/src/main/i18n/translations/misc_es_CL.properties
+++ b/util/src/main/i18n/translations/misc_es_CL.properties
@@ -101,9 +101,9 @@ misc.unknown = Desconocido
 
 misc.console = Consola
 
-misc.on = Encendido
+misc.on = Sí
 
-misc.off = Apagado
+misc.off = No
 
 misc.to = Para
 
@@ -119,15 +119,15 @@ misc.alert = Alerta
 
 misc.warning = ADVERTENCIA
 
-misc.top = Arriba
+misc.top = Top
 
-misc.bottom = Abajo
+misc.bottom = Bottom
 
-misc.front = Adelante
+misc.front = Front
 
-misc.back = Atrás
+misc.back = Back
 
-misc.rear = Detrás
+misc.rear = Rear
 
 misc.left = Izquierda
 
@@ -186,7 +186,7 @@ type.gamemode = modo de juego
 
 type.component = texto
 
-type.uri = url
+type.uri = URL
 
 type.team = equipo
 
