Update Spanish, Chile translations

--- a/util/src/main/i18n/translations/moderation_es_CL.properties
+++ b/util/src/main/i18n/translations/moderation_es_CL.properties
@@ -150,7 +150,7 @@ moderation.defuse.enemy = No puedes desactivar la TNT enemiga.
 
 moderation.defuse.displayName = Desactivador de TNT
 
-moderation.defuse.tooltip = Click derecho para desactivar la TNT en un radio de 5 bloques
+moderation.defuse.tooltip = Clic derecho para desactivar toda la TNT en un radio de 5 bloques
 
 moderation.defuse.world = Has desactivado la TNT del mundo.
 
