Fix the formatting
Signed-off-by: Valky <vicnicolas200@gmail.com>

--- a/util/src/main/i18n/templates/moderation.properties
+++ b/util/src/main/i18n/templates/moderation.properties
@@ -150,6 +150,10 @@ moderation.defuse.enemy = You may not defuse enemy TNT.
 
 moderation.defuse.displayName = TNT Defuser
 
+# {0} = defuser player name
+# {1} = griefer player name
+moderation.defuse.message = {0} defused {1}'s TNT!
+
 moderation.defuse.tooltip = Right-click to defuse TNT in a 5-block radius
 
 moderation.defuse.world = You defused world TNT.
