Rework /vote logic * Added create & replace vote modes
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/map.properties
+++ b/util/src/main/i18n/templates/map.properties
@@ -134,3 +134,13 @@ vote.limit = Selection limit for the vote has been reached
 
 vote.title.map = Selected Maps
 
+# {0} = player name (who toggled mode)
+# {1} = mode name
+vote.toggle = {0} toggled vote mode to {1}
+
+vote.mode.replace = Replace
+
+vote.mode.create = Create
+
+vote.mode.hover = Click to toggle vote mode
+
