Licenses for maps!
Signed-off-by: SimonProMac <simonmr60@gmail.com>
Signed-off-by: KingSimon <simonmorland@gmail.com>

--- a/util/src/main/i18n/templates/map.properties
+++ b/util/src/main/i18n/templates/map.properties
@@ -30,6 +30,8 @@ map.info.xml.tip = View the XML code that controls this map
 
 map.info.proto = Proto
 
+map.info.license = License
+
 map.info.source = Source
 
 map.info.folder = Folder
