Fix duplicate translation key
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/map.properties
+++ b/util/src/main/i18n/templates/map.properties
@@ -132,7 +132,7 @@ vote.remove = {0} removed {1} from the vote
 
 vote.limit = Selection limit for the vote has been reached
 
-vote.title.map = Selected Maps
+vote.title.selection = Selected Maps
 
 # {0} = player name (who toggled mode)
 # {1} = mode name
