Rework /vote logic
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/map.properties
+++ b/util/src/main/i18n/templates/map.properties
@@ -132,5 +132,15 @@ vote.remove = {0} removed {1} from the vote
 
 vote.limit = Selection limit for the vote has been reached
 
-vote.title.map = Selected Maps
+vote.title.selection = Selected Maps
+
+# {0} = player name (who toggled mode)
+# {1} = mode name
+vote.toggle = {0} toggled vote mode to {1}
+
+vote.mode.replace = Replace
+
+vote.mode.create = Create
+
+vote.mode.hover = Click to toggle vote mode
 
