Accounting for owner == null case
Signed-off-by: Valky <vicnicolas200@gmail.com>

--- a/util/src/main/i18n/templates/moderation.properties
+++ b/util/src/main/i18n/templates/moderation.properties
@@ -154,6 +154,9 @@ moderation.defuse.displayName = TNT Defuser
 # {1} = griefing player name
 moderation.defuse.message = {0} defused {1}'s TNT
 
+# {0} = defusing player name
+moderation.defuse.message.unknown = {0} defused a TNT
+
 moderation.defuse.tooltip = Right-click to defuse TNT in a 5-block radius
 
 moderation.defuse.world = You defused world TNT.
