Re-color the message
Signed-off-by: Valky <vicnicolas200@gmail.com>

--- a/util/src/main/i18n/templates/moderation.properties
+++ b/util/src/main/i18n/templates/moderation.properties
@@ -152,10 +152,12 @@ moderation.defuse.displayName = TNT Defuser
 
 # {0} = defusing player name
 # {1} = griefing player name
-moderation.defuse.message = {0} defused {1}'s TNT
+# {2} = "TNT"
+moderation.defuse.message = {0} defused {1}'s {2}
 
 # {0} = defusing player name
-moderation.defuse.message.unknown = {0} defused a TNT
+# {1} = "TNT"
+moderation.defuse.message.unknown = {0} defused a {1}
 
 moderation.defuse.tooltip = Right-click to defuse TNT in a 5-block radius
 
