--- a/util/src/main/i18n/templates/map.properties
+++ b/util/src/main/i18n/templates/map.properties
@@ -56,7 +56,7 @@ map.setNext.revert = {0} has removed {1} as the next map
 
 map.noNextMap = No next map
 
-tablist.authors.tooMany = type {0} for info
+map.info.commandHint = Type {0} for info
 
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
