--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -111,6 +111,9 @@ broadcast.matchStart = The match has started!
 
 broadcast.startCancel = Match start cancelled
 
+broadcast.overtime = The match was tied, overtime has started, once the tie is broken time will start ticking
+broadcast.overtime.limit = If the match is still tied after {0} it will result in a tie.
+
 broadcast.gameOver = Game over!
 
 broadcast.gameOver.teamWon = Your team won!
