--- a/util/src/main/i18n/templates/misc.properties
+++ b/util/src/main/i18n/templates/misc.properties
@@ -54,6 +54,8 @@ misc.timeAgo = {0} ago
 # {0} = duration (e.g. "1:00" for 1 minute left, "15:25" for 15 minutes and 25 seconds left)
 misc.timeRemaining = Time Remaining: {0}
 
+misc.overtime = Overtime {0}
+
 # {0} = player name
 misc.createdBy = Created by {0}
 
