Update French translations

--- a/util/src/main/i18n/translations/misc_fr_FR.properties
+++ b/util/src/main/i18n/translations/misc_fr_FR.properties
@@ -92,6 +92,7 @@ misc.team = Equipe
 # A choice with two options (e.g. 1 hour or 5 matches)
 # {0} = the first option
 # {1} = the second option
+misc.or = {0} ou {1}
 
 # do not translate, keep as-is
 misc.snowman = ☃
