--- a/util/src/main/i18n/translations/map_gl_ES.properties
+++ b/util/src/main/i18n/translations/map_gl_ES.properties
@@ -46,6 +46,7 @@ map.setNext.confirm = Non debes seleccionar o seguinte mapa cuando xa hai un rei
 # {1} = name of map that was unset
 
 
+
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
 map.cycleMap = Rotando a {0} en {1}
@@ -95,6 +96,12 @@ map.protectPortal = Non debes obstruir este área
 
 # {0} = player name (who removed the map)
 # {1} = map name 
+
+
+
+# {0} = player name (who toggled mode)
+# {1} = mode name
+
 
 
 
