--- a/util/src/main/i18n/translations/map_af_ZA.properties
+++ b/util/src/main/i18n/translations/map_af_ZA.properties
@@ -44,6 +44,7 @@ map.setNext.confirm = Jy mag nie stel die kaart wanneer 'n herlaai dit is touges
 # {1} = name of map that was unset
 
 
+
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
 map.cycleMap = Fietsry na {0} in {1}
@@ -93,6 +94,12 @@ map.protectPortal = Jy mag nie hierdie area belemmer
 
 # {0} = player name (who removed the map)
 # {1} = map name 
+
+
+
+# {0} = player name (who toggled mode)
+# {1} = mode name
+
 
 
 
