Update Catalan translations

--- a/util/src/main/i18n/translations/map_ca_ES.properties
+++ b/util/src/main/i18n/translations/map_ca_ES.properties
@@ -52,6 +52,7 @@ map.setNext.confirm = No pots establir un mapa com a següent quan una reinicial
 
 map.noNextMap = No hi ha cap mapa següent
 
+
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
 map.cycleMap = Rotant a {0} en {1}
@@ -96,6 +97,7 @@ pool.noMapPools = No hi ha cap agrupació de mapes carregats
 pool.mapPoolsDisabled = Els grups de mapes estan actualment desactivats
 
 
+vote.title.map = Vota el mapa
 
 
 # {0} = option name (e.g. "Airship Battle")
@@ -110,6 +112,12 @@ pool.mapPoolsDisabled = Els grups de mapes estan actualment desactivats
 
 # {0} = player name (who removed the map)
 # {1} = map name 
+
+
+
+# {0} = player name (who toggled mode)
+# {1} = mode name
+
 
 
 
