Update Danish translations

--- a/util/src/main/i18n/translations/map_da_DK.properties
+++ b/util/src/main/i18n/translations/map_da_DK.properties
@@ -45,6 +45,7 @@ map.setNext.confirm = Du må ikke sætte næste bane når en genstart er på vej
 # {1} = name of map that was unset
 
 
+
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
 map.cycleMap = Skifter til {0} om {1}
@@ -94,6 +95,12 @@ map.protectPortal = Du kan ikke blokere dette område
 
 # {0} = player name (who removed the map)
 # {1} = map name 
+
+
+
+# {0} = player name (who toggled mode)
+# {1} = mode name
+
 
 
 
