Update Italian translations

--- a/util/src/main/i18n/translations/map_it_IT.properties
+++ b/util/src/main/i18n/translations/map_it_IT.properties
@@ -46,6 +46,7 @@ map.setNext.confirm = Non puoi stabilire la mappa seguente quando c'è un riavvi
 # {1} = name of map that was unset
 
 
+
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
 map.cycleMap = Ruotando a {0} in {1}
@@ -95,6 +96,12 @@ map.protectPortal = Non puoi ostruire quest'area
 
 # {0} = player name (who removed the map)
 # {1} = map name 
+
+
+
+# {0} = player name (who toggled mode)
+# {1} = mode name
+
 
 
 
