--- a/util/src/main/i18n/translations/map_ko_KR.properties
+++ b/util/src/main/i18n/translations/map_ko_KR.properties
@@ -56,6 +56,7 @@ map.setNext.revert = {0}이(가) 다음 맵 {1}을(를) 제거했습니다
 
 map.noNextMap = 다음 맵 없음
 
+
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
 map.cycleMap = {1} 후에 {0}(으)로 이동합니다
@@ -107,7 +108,7 @@ pool.mapPoolsDisabled = 맵 풀(Map pools)이 현재 비활성화되었습니다
 
 vote.noVote = 현재 진행되는 투표가 없습니다
 
-vote.title.map = 맵 선택됨
+vote.title.map = 맵 투표
 
 vote.header.map = 플레이하고 싶은 맵을 모두 클릭하세요\:
 
@@ -132,4 +133,15 @@ vote.remove = {0}이(가) {1}에 투표를 취소했습니다
 
 vote.limit = 투표 선택 한도에 도달했습니다
 
+vote.title.selection = 맵 선택됨
+
+# {0} = player name (who toggled mode)
+# {1} = mode name
+vote.toggle = {0}이(가) 투표 모드를 {1}(으)로 전환했습니다
+
+vote.mode.replace = 변경
+
+vote.mode.create = 생성
+
+vote.mode.hover = 클릭하여 투표 모드 전환
 
