Update Dutch translations

--- a/util/src/main/i18n/translations/map_nl_NL.properties
+++ b/util/src/main/i18n/translations/map_nl_NL.properties
@@ -46,6 +46,7 @@ map.setNext.confirm = Je kunt de volgende map niet instellen wanneer er een hers
 # {1} = name of map that was unset
 
 
+
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
 map.cycleMap = Volgende map\: {0}, over {1}
@@ -95,6 +96,12 @@ map.protectPortal = Je mag dit gebied niet blokkeren
 
 # {0} = player name (who removed the map)
 # {1} = map name 
+
+
+
+# {0} = player name (who toggled mode)
+# {1} = mode name
+
 
 
 
