Update Polish translations

--- a/util/src/main/i18n/translations/map_pl_PL.properties
+++ b/util/src/main/i18n/translations/map_pl_PL.properties
@@ -51,6 +51,7 @@ map.setNext.confirm = Nie możesz ustawić następnej mapy gdy w kolejce jest po
 
 map.noNextMap = Brak następnej mapy
 
+
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
 map.cycleMap = Przenoszenie do {0} za {1}
@@ -101,6 +102,12 @@ pool.mapPoolsDisabled = Baseny map są obecnie wyłączone
 
 # {0} = player name (who removed the map)
 # {1} = map name 
+
+
+
+# {0} = player name (who toggled mode)
+# {1} = mode name
+
 
 
 
