--- a/util/src/main/i18n/translations/map_sv_SE.properties
+++ b/util/src/main/i18n/translations/map_sv_SE.properties
@@ -56,6 +56,7 @@ map.setNext.revert = {0} har tagit bort {1} som nästa karta
 
 map.noNextMap = Ingen nästa karta
 
+
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
 map.cycleMap = Cirkulerar till {0} om {1}
@@ -76,10 +77,12 @@ pool.change = Kartbanken har satts till {0} för att bättre anpassa sig till nu
 
 # {0} = map pool name (e.g. "Mega")
 # {1} = player name
+pool.change.force = {1} satte kartbanken till {0}
 
 # {0} = map pool name (e.g. "Mega")
 # {1} = a duration (e.g. "2 hours")
 # {2} = player name
+pool.change.forceTimed = {2} satte kartbanken till {0} för {1}
 
 # {0} = number of positions
 pool.skip = Hoppade över totalt {0} positioner.
@@ -105,6 +108,7 @@ pool.mapPoolsDisabled = Kartpooler är för närvarande inaktiverade
 
 vote.noVote = Det finns inget att rösta för just nu
 
+vote.title.map = Kartröstning
 
 vote.header.map = Klicka på alla kartor du vill spela\:
 
@@ -117,12 +121,27 @@ vote.against = Röstade mot {0}
 # {0} = option name (e.g. "Airship Battle")
 vote.abstain = Tog bort din röst på {0}
 
+vote.disabled = Omröstning är inaktiverad
 
 # {0} = player name (who added the map)
 # {1} = map name 
+vote.add = {0} lade till {1} i omröstningen
 
 # {0} = player name (who removed the map)
 # {1} = map name 
+vote.remove = {0} tog bort {1} från omröstningen
 
+vote.limit = Urvalsgräns för omröstningen har uppnåtts
 
+vote.title.selection = Valda Kartor
+
+# {0} = player name (who toggled mode)
+# {1} = mode name
+vote.toggle = {0} bytte röstläge till {1}
+
+vote.mode.replace = Ersätt
+
+vote.mode.create = Skapa
+
+vote.mode.hover = Klicka för att växla röstläge
 
