Update Spanish, Chile translations

--- a/util/src/main/i18n/translations/map_es_CL.properties
+++ b/util/src/main/i18n/translations/map_es_CL.properties
@@ -56,6 +56,7 @@ map.setNext.revert = {0} quitó {1} como mapa siguiente
 
 map.noNextMap = No hay mapa siguiente
 
+
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
 map.cycleMap = Cambiando a {0} en {1}
@@ -107,7 +108,7 @@ pool.mapPoolsDisabled = Las pools de mapas están deshabilitadas
 
 vote.noVote = No hay votaciones en curso
 
-vote.title.map = Mapas seleccionados
+vote.title.map = Votación de mapas
 
 vote.header.map = Clickea todos los mapas que quieras jugar\:
 
@@ -131,5 +132,12 @@ vote.add = {0} añadió {1} a la votación
 vote.remove = {0} quitó {1} de la votación
 
 vote.limit = Se alcanzó el límite de selección por votación
+
+vote.title.selection = Mapas seleccionados
+
+# {0} = player name (who toggled mode)
+# {1} = mode name
+
+
 
 
