Update Spanish, Mexico translations

--- a/util/src/main/i18n/translations/map_es_MX.properties
+++ b/util/src/main/i18n/translations/map_es_MX.properties
@@ -56,6 +56,7 @@ map.setNext.revert = {0} ha quitado {1} como el siguiente mapa
 
 map.noNextMap = No hay ningún mapa que siga
 
+
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
 map.cycleMap = Cambiando a {0} en {1}
@@ -107,7 +108,7 @@ pool.mapPoolsDisabled = Las pools de mapas están desactivadas
 
 vote.noVote = No hay nada que votar ahora mismo
 
-vote.title.map = Mapas seleccionados
+vote.title.map = Votacion de mapas
 
 vote.header.map = Haz clic en todos los mapas que quieras jugar\:
 
@@ -131,5 +132,12 @@ vote.add = {0} ha añadido {1} a la votación
 vote.remove = {0} ha quitado {1} de la votación
 
 vote.limit = Se ha alcanzado el límite de selección por votación
+
+vote.title.selection = Mapas seleccionados
+
+# {0} = player name (who toggled mode)
+# {1} = mode name
+
+
 
 
