--- a/util/src/main/i18n/translations/map_ms_MY.properties
+++ b/util/src/main/i18n/translations/map_ms_MY.properties
@@ -44,6 +44,7 @@ map.setNext.confirm = Anda tidak boleh menetapkan permainan seterusnya apabila p
 # {1} = name of map that was unset
 
 
+
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
 map.cycleMap = Memutar ke {0} dalam {1}
@@ -93,6 +94,12 @@ map.protectPortal = Anda tidak boleh menghalang kawasan ini
 
 # {0} = player name (who removed the map)
 # {1} = map name 
+
+
+
+# {0} = player name (who toggled mode)
+# {1} = mode name
+
 
 
 
