Update English, United Kingdom translations

--- a/util/src/main/i18n/translations/map_en_GB.properties
+++ b/util/src/main/i18n/translations/map_en_GB.properties
@@ -56,6 +56,7 @@ map.setNext.revert = {0} has removed {1} as the next map
 
 map.noNextMap = No next map
 
+
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
 map.cycleMap = Cycling to {0} in {1}
@@ -107,7 +108,7 @@ pool.mapPoolsDisabled = Map pools are currently disabled
 
 vote.noVote = There is nothing to vote for right now
 
-vote.title.map = Selected Maps
+vote.title.map = Map Vote
 
 vote.header.map = Click on all of the maps you want to play\:
 
@@ -132,4 +133,15 @@ vote.remove = {0} removed {1} from the vote
 
 vote.limit = Selection limit for the vote has been reached
 
+vote.title.selection = Selected Maps
+
+# {0} = player name (who toggled mode)
+# {1} = mode name
+vote.toggle = {0} toggled vote mode to {1}
+
+vote.mode.replace = Replace
+
+vote.mode.create = Create
+
+vote.mode.hover = Click to toggle vote mode
 
