Update Tagalog translations

--- a/util/src/main/i18n/translations/map_tl_PH.properties
+++ b/util/src/main/i18n/translations/map_tl_PH.properties
@@ -36,6 +36,7 @@ map.info.rules = Patakaran
 # {1} = name of map that was unset
 
 
+
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
 
@@ -82,6 +83,12 @@ map.info.rules = Patakaran
 
 # {0} = player name (who removed the map)
 # {1} = map name 
+
+
+
+# {0} = player name (who toggled mode)
+# {1} = mode name
+
 
 
 
