Update LOLCAT translations

--- a/util/src/main/i18n/translations/map_lol_US.properties
+++ b/util/src/main/i18n/translations/map_lol_US.properties
@@ -56,6 +56,7 @@ map.setNext.revert = {0} haz zapped {1} az da nxt map
 
 map.noNextMap = nu moar mapz
 
+
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
 map.cycleMap = Movin to {0} in {1}\!\!
@@ -107,7 +108,7 @@ pool.mapPoolsDisabled = Mawp poolz ar currnly disabld
 
 vote.noVote = Nuthin to voet 4 naw, come back latr
 
-vote.title.map = selctd mawps
+vote.title.map = Map voet
 
 vote.header.map = Punch all of da maps u wantz to play\:
 
@@ -132,4 +133,15 @@ vote.remove = {0} removd {1} frawm vote
 
 vote.limit = Selecchun limiwt 4 da voet has ben raechd
 
+vote.title.selection = selctd mawps
+
+# {0} = player name (who toggled mode)
+# {1} = mode name
+vote.toggle = {0} switch vot on nd off a {1}
+
+vote.mode.replace = Replaze
+
+vote.mode.create = Creat
+
+vote.mode.hover = Paw 2 chang vot MOD
 
