Update French translations

--- a/util/src/main/i18n/translations/moderation_fr_FR.properties
+++ b/util/src/main/i18n/translations/moderation_fr_FR.properties
@@ -38,6 +38,7 @@ moderation.screen.signoff = Émis par {0}
 moderation.screen.expires = Expire dans {0}
 
 # {0} = mute reason
+moderation.mute.message = Vous avez été rendu muet et ne pouvez pas envoyer de messages dans le chat
 
 moderation.mute.list = Joueurs muets
 
