--- a/util/src/main/i18n/translations/moderation_ko_KR.properties
+++ b/util/src/main/i18n/translations/moderation_ko_KR.properties
@@ -16,7 +16,7 @@ moderation.type.temp_ban = {0} 동안 차단
 
 # {0} = number of online staff
 # {1} = list of staff names (e.g. "Bob, Alice, and Jerry")
-moderation.staff.name = 접속 중인 스탭 ({0})명\: {1}
+moderation.staff.name = 온라인인 스탭 ({0})명\: {1}
 moderation.staff.empty = 온라인 스탭이 없습니다 \:(
 
 # {0} = punishment reason (e.g. "Hacking is not allowed")
@@ -42,7 +42,7 @@ moderation.mute.message = {0} 이유로 채팅 금지가 되었습니다
 
 moderation.mute.list = 채팅 금지된 플레이어 목록
 
-moderation.mute.none = 접속 중인 플레이어 중 채팅이 금지된 플레이어가 없습니다.
+moderation.mute.none = 온라인인 플레이어 중 채팅이 금지된 플레이어가 없습니다.
 
 # {0} = player name
 moderation.mute.hover = 클릭하여 {0}을(를) 채팅 금지 해제
@@ -71,7 +71,7 @@ moderation.reports.hover = {0}에 의해 신고됨
 moderation.alts.header = 부계정
 
 # {0} = player name
-moderation.alts.noAlts = {0}은(는) 접속 중인 부계정이 없습니다.
+moderation.alts.noAlts = {0}은(는) 온라인인 부계정이 없습니다.
 
 # {0} = ip address (e.g. "1.2.3.4")
 moderation.ipBan.invalidIP = {0}은(는) 유효한 IP 주소가 아닙니다
@@ -81,7 +81,7 @@ moderation.ipBan.banned = {0}이(가) IP 차단되었습니다
 
 # {0} = player name or ip address (e.g. "Notch" or "1.2.3.4")
 # {1} = number of alternate accounts
-moderation.ipBan.bannedWithAlts = {0}이(가) {1}개의 부계정과 함께 IP 차단되었습니다
+moderation.ipBan.bannedWithAlts = {0}이(가) {1}개의 온라인 부계정과 함께 IP 차단되었습니다
 
 # {0} = player name
 moderation.records.lookupNone = {0}은(는) 처벌 기록이 없습니다
@@ -161,7 +161,7 @@ moderation.defuse.player = {0}의 TNT가 해체되었습니다.
 # {1} = accused player name
 # {2} = reason for report (e.g. "Is griefing my home")
 moderation.report.notify = {0}이(가) {1}\: {2}으(로) 신고했습니다
-moderation.report.acknowledge = 신고가 곧 처리될 것입니다.
+moderation.report.acknowledge = 이 문제는 곧 처리될 것입니다.
 
 # {0} = number of seconds
 moderation.afk.warn = 활동이 없어 {0}초 뒤 접속이 끊깁니다
