Update Norwegian translations

--- a/util/src/main/i18n/translations/moderation_no_NO.properties
+++ b/util/src/main/i18n/translations/moderation_no_NO.properties
@@ -38,6 +38,7 @@ moderation.screen.signoff = Utstedt av {0}
 moderation.screen.expires = Utgår om {0}
 
 # {0} = mute reason
+moderation.mute.message = Du har blitt dempet med begrunnelsen {0} og kan ikke sende meldinger i chatten
 
 moderation.mute.list = Dempede spillere
 
@@ -60,6 +61,7 @@ moderation.unmute.target = Du er ikke lenger dempet og kan nå sende meldinger
 # {0} = player name
 moderation.unmute.none = {0} er ikke dempet.
 
+moderation.reports.none = Det har ikke vært noen nylige anmeldelser\!
 
 moderation.reports.header = Nylige anmeldelser
 
@@ -75,11 +77,14 @@ moderation.alts.noAlts = {0} har ingen alternative kontoer online.
 moderation.ipBan.invalidIP = {0} er ikke en gyldig IP-adresse
 
 # {0} = player name
+moderation.ipBan.banned = {0} og den tilhørende IP-adressen har blitt utestengt
 
 # {0} = player name or ip address (e.g. "Notch" or "1.2.3.4")
 # {1} = number of alternate accounts
+moderation.ipBan.bannedWithAlts = {0} og den tilhørende IP-adressen har blitt utestengt sammen med {1} andre online spillere
 
 # {0} = player name
+moderation.records.lookupNone = {0} har ikke noe rulleblad
 
 
 # {0} = punishment reason (e.g. "Hacking is not allowed")
@@ -109,6 +114,7 @@ moderation.freeze.itemName = Spiller Fryser
 
 moderation.freeze.itemDescription = Høyreklikk en spiller for å fryse/tine dem
 
+moderation.freeze.notEnabled = Frysing er ikke aktivert
 
 # {0} = player name
 moderation.freeze.exempt = {0} kan ikke bli frosset
