Update Swedish translations

--- a/util/src/main/i18n/translations/moderation_sv_SE.properties
+++ b/util/src/main/i18n/translations/moderation_sv_SE.properties
@@ -38,6 +38,7 @@ moderation.screen.signoff = Utfärdad av {0}
 moderation.screen.expires = Förfaller om {0}
 
 # {0} = mute reason
+moderation.mute.message = Du har blivit tystad för {0}
 
 moderation.mute.list = Nedtystade spelare
 
