Update Romanian translations

--- a/util/src/main/i18n/translations/map_ro_RO.properties
+++ b/util/src/main/i18n/translations/map_ro_RO.properties
@@ -56,6 +56,7 @@ map.setNext.revert = {0} a înlăturat {1} ca următoarea hartă
 
 map.noNextMap = Nu există următoarea hartă
 
+
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
 map.cycleMap = Se va schimba la {0} în {1}
@@ -107,6 +108,7 @@ pool.mapPoolsDisabled = Mulțimile de hărți sunt dezactivate momentan
 
 vote.noVote = Nu este nimic de votat momentan
 
+vote.title.map = Vot pentru hartă
 
 vote.header.map = Fă clic pe toate hărțile pe care vrei să le joci\:
 
@@ -119,12 +121,27 @@ vote.against = Ai votat împotriva {0}
 # {0} = option name (e.g. "Airship Battle")
 vote.abstain = Ți-ai retras votul pentru {0}
 
+vote.disabled = Votarea este dezactivată
 
 # {0} = player name (who added the map)
 # {1} = map name 
+vote.add = {0} a adăugat {1} la vot
 
 # {0} = player name (who removed the map)
 # {1} = map name 
+vote.remove = {0} a înlăturat {1} de la vot
 
+vote.limit = Limita selecțiilor pentru vot a fost atinsă
 
+vote.title.selection = Hărți selectate
+
+# {0} = player name (who toggled mode)
+# {1} = mode name
+vote.toggle = {0} a comutat modul de vot la {1}
+
+vote.mode.replace = Înlocuire
+
+vote.mode.create = Creare
+
+vote.mode.hover = Fă clic pentru a comuta modul de vot
 
