--- a/util/src/main/i18n/translations/gamemode_es_CL.properties
+++ b/util/src/main/i18n/translations/gamemode_es_CL.properties
@@ -218,6 +218,7 @@ flag.willRespawn.named = {0} reaparecerá en {1} en {2}
 
 # {0} = flag name
 # {1} = post name
+flag.willRespawn.next = {0} reaparecerá en {1}
 
 # {0} = flag name
 flag.respawn = {0} ha reaparecido
