--- a/util/src/main/i18n/translations/gamemode_de_DE.properties
+++ b/util/src/main/i18n/translations/gamemode_de_DE.properties
@@ -24,6 +24,7 @@ gamemode.arcade.name = Arcade
 
 gamemode.ffa.name = Free-for-all
 
+gamemode.mixed.name = Gemischt
 
 gamemode.generic.acronym = Spiel
 
@@ -51,6 +52,7 @@ gamemode.arcade.acronym = Arcade
 
 gamemode.ffa.acronym = FFA
 
+gamemode.mixed.acronym = Gemischt
 
 objective.name.monument = Monument
 
@@ -216,6 +218,7 @@ flag.willRespawn.named = {0} wird in {2} bei {1} wieder auftauchen
 
 # {0} = flag name
 # {1} = post name
+flag.willRespawn.next = {0} wird als Nächstes bei {1} wieder auftauchen
 
 # {0} = flag name
 flag.respawn = {0} ist wieder aufgetaucht
