Update Korean translations

--- a/util/src/main/i18n/translations/gamemode_ko_KR.properties
+++ b/util/src/main/i18n/translations/gamemode_ko_KR.properties
@@ -12,19 +12,18 @@ gamemode.tdm.name = 팀 데스매치
 
 gamemode.ad.name = 공격/방어
 
-gamemode.koth.name = 언덕 점령
 
-gamemode.blitz.name = 블리츠
+gamemode.blitz.name = 전격전
 
-gamemode.rage.name = Rage
+gamemode.rage.name = 광란
 
 gamemode.scorebox.name = 스코어박스
 
 gamemode.arcade.name = 아케이드
 
-gamemode.ffa.name = 개인전
+gamemode.ffa.name = 난투
 
-gamemode.mixed.name = Mixed
+gamemode.mixed.name = 복합
 
 gamemode.generic.acronym = 경기
 
@@ -42,17 +41,13 @@ gamemode.ad.acronym = 공/방
 
 gamemode.koth.acronym = KoTH
 
-gamemode.blitz.acronym = 블리츠
 
-gamemode.rage.acronym = Rage
 
-gamemode.scorebox.acronym = 스코어박스
 
 gamemode.arcade.acronym = 아케이드
 
 gamemode.ffa.acronym = FFA
 
-gamemode.mixed.acronym = Mixed
 
 objective.name.monument = 기념물
 
@@ -62,7 +57,7 @@ objective.name.orb = 오브
 
 objective.name.inhibitor = 억제기
 
-objective.name.tower = 타워
+objective.name.tower = 탑
 
 objective.name.base = 기지
 
@@ -81,7 +76,7 @@ objective.modeCountdown = {1} 내로 {0}
 # Don't translate, keep as-is
 objective.credit.percentage = {0} ({1}%)
 
-objective.credit.etc = 여러명
+objective.credit.etc = 그 밖의 사람들
 
 objective.credit.many = 아주 많은 플레이어들
 
@@ -91,167 +86,120 @@ objective.credit.unknown = 알 수 없는 힘
 objective.credit.future = {0} 목표가 완료되었을 때, 당신이 팀 목표에 기여했음이 인정됩니다
 
 # TODO: Replace with objective.damageOwn, etc.
-destroyable.damageOwn = 같은 팀의 목표물은 부술 수 없습니다.
 
-destroyable.repairOther = 당신은 적의 목표물을 복구할 수 없습니다.
 
-destroyable.repairDisabled = 이 목표물은 복구될 수 없습니다.
 
-core.damageOwn = 같은 팀의 코어는 부술 수 없습니다.
 
 # {0} = objective name (e.g. "Left Core")
-objective.damageOwn = 같은 팀의 {0}은(는) 부술 수 없습니다
 
 # {0} = objective name
-objective.repairOther = 상대 팀의 {0}을(를) 복구할 수는 없습니다
 
 # {0} = objective name
-objective.repairDisabled = 같은 팀의 {0}을(를) 복구할 수 없습니다
 
 # {0} = player name
 # {1} = monument name (e.g. "Monument A")
 # {2} = team name
-destroyable.complete.owned = {2}의 {1}이(가) {0}에게 파괴되었습니다
 
 # {0} = player name
 # {1} = monument name
-destroyable.complete = {1}이(가) {0}에게 파괴되었습니다
 
 # {0} = player name
 # {1} = monument name
 # {2} = team name
-destroyable.touch.owned.player = {0}이(가) {2}의 {1}에 손상을 입혔습니다
 
 # {1} = monument name
 # {2} = team name
-destroyable.touch.owned.you = {2}의 {1}에 손상을 입혔습니다
 
 # {1} = monument name
 # {2} = team name
-destroyable.touch.owned = {2}의 {1}이 손상되었습니다
 
 # {0} = player name
 # {1} = monument name
-destroyable.touch.player = {0}이(가) {1}에 손상을 입혔습니다
 
 # {1} = monument name
-destroyable.touch.you = {1}에 손상을 입혔습니다
 
 # {1} = monument name
-destroyable.touch = {1}이(가) 손상되었습니다
 
 # {0} = player name
 # {1} = core name (e.g. "Right Core")
 # {2} = team name
-core.complete.owned = {2} {1}의 내용물이 {0}에게 유출되었습니다
 
 # {0} = player name
 # {1} = core name
-core.complete = {1}의 내용물이 {0}에 의해 유출되었습니다.
 
 # {0} = player name
 # {1} = wool name (e.g "Red Wool")
 # {2} = team name
-wool.complete.owned = {0}이(가) {2}을(를) 위해 {1}을(를) 설치하였습니다
 
 # {0} = player name
 # {1} = wool name
-wool.complete = {0}이(가) {1}을(를) 설치했습니다
 
 # {0} = player name
 # {1} = wool name
 # {2} = team name
-wool.touch.owned.player = {0}이(가) {2}을 위해 {1}을(를) 획득하였습니다
 
 # {0} = player name
 # {1} = wool name
-wool.touch.player = {0}이(가) {1}을(를) 획득했습니다
 
 # {1} = wool name
 # {2} = team name
-wool.touch.owned.you = {2}을(를) 위해 {1}을(를) 획득하였습니다
 
 # {1} = wool name
-wool.touch.you = {1}을(를) 획득하였습니다.
 
 # {0} = team name
 # {1} = wool name
-wool.wrongTeam = {0}의 팀원만 여기에 {1}을(를) 설치할 수 있습니다
 
 # {0} = wool name
-wool.wrongWool = 오직 {0}만 여기에 설치할 수 있습니다
 
 # {0} = wool name
-wool.craftingDisabled = {0}을(를) 제작하는 것은 허용되지 않습니다
 
 # {0} = flag name (e.g. "Green Flag")
 # {1} = player name
 flag.touch.player = {0}을(를) {1}이(가) 획득했습니다
 
 # {0} = flag name
-flag.touch.you = {0}을(를) 획득하였습니다.
+flag.touch.you = {0}을(를) 획득했습니다
 
 # {0} = flag name
-flag.drop = {0}가 떨어졌습니다.
 
 # {0} = flag name
 # {1} = player name
-flag.capture.player = {0}이(가) {1}에 의해서 점령당하였습니다.
 
 # {0} = flag name
-flag.capture.you = {0}을(를) 캡쳐하였습니다
 
 # {0} = flag name
-flag.captureDenied = {0}는 획득이 가능할 때 점령이 가능할 것입니다
 
 # {0} = flag name
-flag.return = {0}이(가) 다시 돌아왔습니다
 
 # {0} = flag name
 # {1} = duration (e.g. "5 seconds")
-flag.willRespawn = {0}이(가) {1} 후에 재생성됩니다
 
 # {0} = flag name
 # {1} = post name
 # {2} = duration
-flag.willRespawn.named = {0}이(가) {2} 후에 {1}에서 재생성됩니다
 
 # {0} = flag name
 # {1} = post name
-flag.willRespawn.next = {0}이(가) 다음에 {1}에서 재생성됩니다
 
 # {0} = flag name
-flag.respawn = {0}이(가) 다시 생성되었습니다
 
 # {0} = flag name
-flag.respawnTogether = 모든 깃발이 캡쳐되었을 때 {0}이(가) 리스폰됩니다
 
 # {0} = flag name
-flag.carrying = {0}을(를) 운반하고있습니다.
 
 # {0} = flag name (being captured)
 # {1} = flag name (preventing capture)
-flag.captureDenied.byFlag = {0}은(는) {1}이(가) 떨어지면 점령됩니다
 
-flag.cannotBreakFlag = 깃발은 부서질 수 없습니다
 
-flag.cannotBreakBlockUnder = 깃발 아래의 블록은 부서질 수 없습니다
 
 # {0} = player name
 # {1} = number of points (e.g. "3 points")
 # {2} = team name
-scorebox.scored = {0}이(가) {2}을(를) 위해 {1}을 획득했습니다
 
 # {0} = number of player lives left (e.g. "2 lives")
-blitz.livesRemaining = {0}이(가) 남아있습니다.
 
 # {0} = "Blitz"
-blitz.joinDenied = {0} 경기 중에는 참여할 수 없습니다.
 
-victoryCondition.blitz = 최대 생존자
 
-victoryCondition.goals = 최대 목표물
 
-victoryCondition.tie = 아무도 승리하지 못했습니다
 
-victoryCondition.score = 최고 점수
