Remove custom licenses++ - make names more readable - add links to each license to read more about them
Signed-off-by: KingSimon <simonmorland@gmail.com>

--- a/util/src/main/i18n/templates/map.properties
+++ b/util/src/main/i18n/templates/map.properties
@@ -32,6 +32,8 @@ map.info.proto = Proto
 
 map.info.license = License
 
+map.info.license.view = Click to view the full license
+
 map.info.source = Source
 
 map.info.folder = Folder
