--- a/util/src/main/i18n/templates/join.properties
+++ b/util/src/main/i18n/templates/join.properties
@@ -35,6 +35,8 @@ join.err.noPermission = You are not allowed to join this match
 
 join.err.alreadyJoined = You have already joined the match
 
+join.err.teamGrief = You made a negative impact for your team and can no longer play this match
+
 # {0} = team name (e.g. "Observers")
 join.err.alreadyJoined.team = You have already joined {0}
 
