--- a/util/src/main/i18n/templates/join.properties
+++ b/util/src/main/i18n/templates/join.properties
@@ -35,7 +35,7 @@ join.err.noPermission = You are not allowed to join this match
 
 join.err.alreadyJoined = You have already joined the match
 
-join.err.teamGrief = You made a negative impact for your team and can no longer play this match
+join.err.teamGrief = You caused too much negative impact to play this match
 
 # {0} = team name (e.g. "Observers")
 join.err.alreadyJoined.team = You have already joined {0}
