Modify overtime info messages
Signed-off-by: Pablete1234 <pabloherrerapalacio@gmail.com>

--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -111,8 +111,8 @@ broadcast.matchStart = The match has started!
 
 broadcast.startCancel = Match start cancelled
 
-broadcast.overtime = The match was tied, overtime has started, once the tie is broken time will start ticking
-broadcast.overtime.limit = If the match is still tied after {0} it will result in a tie.
+broadcast.overtime = Overtime! The timer will start after the tie is broken
+broadcast.overtime.limit = If there is no winner after {0}, the match will be tied.
 
 broadcast.gameOver = Game over!
 
