--- a/util/src/main/i18n/templates/moderation.properties
+++ b/util/src/main/i18n/templates/moderation.properties
@@ -157,6 +157,13 @@ moderation.defuse.world = You defused world TNT.
 # {0} = player name
 moderation.defuse.player = You defused {0}'s TNT.
 
+# {0} = defuser player name
+# {1} = griefer player name
+moderation.defuse.alert.player = {0} defused {1}'s TNT.
+
+# {0} = defuser player name
+moderation.defuse.alert.world = {0} defused world TNT.
+
 # {0} = reporter player name
 # {1} = accused player name
 # {2} = reason for report (e.g. "Is griefing my home")
