More customizable flair formatting
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/misc.properties
+++ b/util/src/main/i18n/templates/misc.properties
@@ -193,3 +193,6 @@ type.uri = url
 type.team = team
 
 type.settingkey = setting
+
+# {0} = a URL (e.g. "https://oc.tc")
+chat.clickLink = More info at {0}
