Improvements to custom voting options
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/map.properties
+++ b/util/src/main/i18n/templates/map.properties
@@ -58,6 +58,8 @@ map.setNext.revert = {0} has removed {1} as the next map
 
 map.noNextMap = No next map
 
+map.noMapsFound = No maps found
+
 map.info.commandHint = Type {0} for info
 
 # {0} = map name
@@ -125,6 +127,8 @@ vote.against = Voted against {0}
 vote.abstain = Removed your vote for {0}
 
 vote.disabled = Voting is disabled
+
+vote.modify.disallow = Unable to modify vote at this time
 
 # {0} = player name (who added the map)
 # {1} = map name 
