Rename VotingPoolOptions and minor cleanup
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/map.properties
+++ b/util/src/main/i18n/templates/map.properties
@@ -58,8 +58,6 @@ map.setNext.revert = {0} has removed {1} as the next map
 
 map.noNextMap = No next map
 
-map.noMapsFound = No maps found
-
 map.info.commandHint = Type {0} for info
 
 # {0} = map name
@@ -152,3 +150,4 @@ vote.mode.create = Create
 
 vote.mode.hover = Click to toggle vote mode
 
+vote.noMapsFound = No maps to clear from the vote
