--- a/util/src/main/i18n/templates/gamemode.properties
+++ b/util/src/main/i18n/templates/gamemode.properties
@@ -241,6 +241,16 @@ flag.cannotBreakFlag = The flag cannot be broken
 
 flag.cannotBreakBlockUnder = The block under the flag cannot be broken
 
+# {0} = payload name
+# {1} = checkpoint reached(number)
+# {2} = total checkpoints(number)
+payload.reachedCheckpoint.forwards = {0} has reached checkpoint {1}/{2}
+
+# {0} = payload name
+# {1} = checkpoint(number)
+# {2} = total checkpoints(number)
+payload.reachedCheckpoint.backwards = {0} has left checkpoint {1}/{2}
+
 # {0} = player name
 # {1} = number of points (e.g. "3 points")
 # {2} = team name
