--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -12,6 +12,9 @@ match.info.players = Players
 
 match.info.observers = Observers
 
+match.info.score = Score
+
+match.info.you = You
 # {0} = team name
 match.balanceTeams = Teams will be auto-balanced if {0} remains stacked
 
