Verbose stats - Rip commit history
- Also includes a refactor of InventoryMenu

Signed-off-by: KingSimon <simonmorland@gmail.com>

Fix some logic and prepare for longestFlagHold

Signed-off-by: KingSimon <simonmorland@gmail.com>

Add longest flag hold
- some pretty stuff

Signed-off-by: KingSimon <simonmorland@gmail.com>

Even prettier

Signed-off-by: KingSimon <simonmorland@gmail.com>

Ready for release

Signed-off-by: KingSimon <simonmorland@gmail.com>

Remove old code

Signed-off-by: KingSimon <simonmorland@gmail.com>

Reviews and some javadoc

Signed-off-by: KingSimon <simonmorland@gmail.com>

Make inventory title a Component
 instead of TranslatableComponent

Signed-off-by: KingSimon <simonmorland@gmail.com>

Verbose stats
- Rip commit history

- Also includes a refactor of InventoryMenu

Signed-off-by: KingSimon <simonmorland@gmail.com>

Fix some logic and prepare for longestFlagHold

Signed-off-by: KingSimon <simonmorland@gmail.com>

Add longest flag hold
- some pretty stuff

Signed-off-by: KingSimon <simonmorland@gmail.com>

Even prettier

Signed-off-by: KingSimon <simonmorland@gmail.com>

Ready for release

Signed-off-by: KingSimon <simonmorland@gmail.com>

Remove old code

Signed-off-by: KingSimon <simonmorland@gmail.com>

Reviews and some javadoc

Signed-off-by: KingSimon <simonmorland@gmail.com>

Cleanup
- TranslatableComponent -> Component
- Remove some old debug stuff
- Fix some typos and javadoc stuff

Signed-off-by: KingSimon <simonmorland@gmail.com>

Pass all formatted doubles as doubles instead of Strings
- Determine if a number is an int or double in StatsMatchModule#numberComponent

Signed-off-by: KingSimon <simonmorland@gmail.com>

Use translatable instead of String
- Rename hotbar task in PlayerStats

Signed-off-by: KingSimon <simonmorland@gmail.com>

Only display verbose stats if all competitors are Teams
-Format

Signed-off-by: KingSimon <simonmorland@gmail.com>

Correctly parse doubles++
- Fix page bug in InventoryMenuUtils#prettyMenu
- Only

--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -55,19 +55,56 @@ match.stats = Kills: {0}  |  Killstreak: {1}  |  Deaths: {2}  |  K/D: {3}
 # {1} = an amount of kills(number)
 match.stats.kills = Kills: {1} by {0}
 
+# {0} = an amount of kills(number)
+match.stats.kills.concise = Kills: {0}
+
 # {0} = a player name
 # {1} = a killstreak(number)
 match.stats.killstreak = Killstreak: {1} by {0}
+
+# {0} = a killstreak(number)
+match.stats.killstreak.concise = Highest killstreak: {0}
 
 # {0} = a player name
 # {1} = an amount of deaths(number)
 match.stats.deaths = Deaths: {1} by {0}
 
+# {0} = an amount of deaths(number)
+match.stats.deaths.concise = Deaths: {0}
+
+# {0} = numbers of kills divided by the number of deaths (kill-death ratio)
+match.stats.kd.concise = K/D: {0}
+
 # {0} = a player name
 # {1} = an amount of blocks
 match.stats.bowshot = Longest Shot: {1} blocks by {0}
 
-match.stats.overall = Match Stats
+# {0} = a player name
+# {1} = an amount of damage
+match.stats.damage = Damage: {1} by {0}
+
+# {0} = the number of damage done
+# {1} = the number of damage done with a bow
+# {2} = the number of damage taken
+match.stats.damage.concise = Damage given(bow) / taken: {0}({1}) / {2}
+
+# {0} = the number of bow shots taken
+# {1} = the number representing someones accuracy(e.g 35%)
+match.stats.bow.concise = Bow shots / Accuracy: {0} / {1}%
+
+# {0} = the number of flags captured
+match.stats.flagsCaptured.concise = Flags captured: {0}
+
+# {0} = a number representing the duration of the hold
+match.stats.flaghold.concise = Longest flag hold: {0}
+
+# {0} the amount of monument pieces broken(number)
+match.stats.broken.concise = Monument pieces broken: {0}
+
+# {0} = a player name
+match.stats.team = {0}'s Match Stats
+
+match.stats.title = Match Stats
 
 match.stats.you = Your Stats
 
