--- a/util/src/main/i18n/templates/misc.properties
+++ b/util/src/main/i18n/templates/misc.properties
@@ -114,6 +114,10 @@ misc.to = To
 
 misc.from = From
 
+misc.nextPage = Next page
+
+misc.previousPage = Previous page
+
 misc.thankYou = Thank you.
 
 misc.noPermission = You don't have permission.
