--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -63,7 +63,7 @@ match.stats.kills.concise = Kills: {0}
 match.stats.killstreak = Killstreak: {1} by {0}
 
 # {0} = a killstreak(number)
-match.stats.killstreak.concise = Highest killstreak: {0}
+match.stats.killstreak.concise = Best Killstreak: {0}
 
 # {0} = a player name
 # {1} = an amount of deaths(number)
@@ -90,19 +90,19 @@ match.stats.damage.concise = Damage given(bow) / taken: {0}({1}) / {2}
 
 # {0} = the number of bow shots taken
 # {1} = the number representing someones accuracy(e.g 35%)
-match.stats.bow.concise = Bow shots / Accuracy: {0} / {1}%
+match.stats.bow.concise = Bow Shots / Accuracy: {0} / {1}%
 
 # {0} = the number of flags captured
-match.stats.flagsCaptured.concise = Flags captured: {0}
+match.stats.flagsCaptured.concise = Flags Captured: {0}
 
-# {0} = a number representing the duration of the hold
-match.stats.flaghold.concise = Longest flag hold: {0}
+# {0} = a number representing the duration of the capture
+match.stats.flaghold.concise = Longest Flag Capture: {0}
 
 # {0} the amount of monument pieces broken(number)
-match.stats.broken.concise = Monument pieces broken: {0}
+match.stats.broken.concise = Monument Blocks Broken: {0}
 
 # {0} = a player name
-match.stats.team = {0}'s Match Stats
+match.stats.team = {0}'s Stats
 
 match.stats.title = Match Stats
 
