--- a/util/src/main/i18n/templates/misc.properties
+++ b/util/src/main/i18n/templates/misc.properties
@@ -114,9 +114,9 @@ misc.to = To
 
 misc.from = From
 
-misc.nextPage = Next page
+misc.nextPage = Next Page
 
-misc.previousPage = Previous page
+misc.previousPage = Previous Page
 
 misc.thankYou = Thank you.
 
