Revert "Remove verbose damage stat"
This reverts commit 7ad26b070c44e7062a32d2d06ab13806edec45c8.

--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -83,6 +83,11 @@ match.stats.bowshot = Longest Shot: {1} blocks by {0}
 # {1} = an amount of damage
 match.stats.damage = Damage: {1} by {0}
 
+# {0} = the number of damage done
+# {1} = the number of damage done with a bow
+# {2} = the number of damage taken
+match.stats.damage.concise = Damage given(bow) / taken: {0}({1}) / {2}
+
 # {0} = the number of bow shots taken
 # {1} = the number representing someones accuracy(e.g 35%)
 match.stats.bow.concise = Bow Shots / Accuracy: {0} / {1}%
