Actually fix translation
Signed-off-by: KingSimon <19822231+KingOfSquares@users.noreply.github.com>

--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -86,7 +86,7 @@ match.stats.damage = Damage: {1} by {0}
 # {0} = the number of damage done
 # {1} = the number of damage done with a bow
 # {2} = the number of damage taken
-match.stats.damage.concise = Damage Given (Bow) / Taken: {0} ({1}) / {2}
+match.stats.damage.concise = Damage Dealt (Bow) / Received: {0} ({1}) / {2}
 
 # {0} = the number of bow shots taken
 # {1} = the number representing someones accuracy(e.g 35%)
