--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -51,12 +51,14 @@ match.class.notFound = No class matched query.
 # {3} = numbers of kills divided by the number of deaths (kill-death ratio)
 match.stats = Kills: {0}  |  Killstreak: {1}  |  Deaths: {2}  |  K/D: {3}
 
+# {0} = number of kills
+# {1} = number of deaths
+# {2} = numbers of kills divided by the number of deaths (kill-death ratio)
+match.stats.concise = Kills: {0}  Deaths: {1}  K/D: {2}
+
 # {0} = a player name
 # {1} = an amount of kills(number)
 match.stats.kills = Kills: {1} by {0}
-
-# {0} = an amount of kills(number)
-match.stats.kills.concise = Kills: {0}
 
 # {0} = a player name
 # {1} = a killstreak(number)
@@ -69,12 +71,6 @@ match.stats.killstreak.concise = Best Killstreak: {0}
 # {1} = an amount of deaths(number)
 match.stats.deaths = Deaths: {1} by {0}
 
-# {0} = an amount of deaths(number)
-match.stats.deaths.concise = Deaths: {0}
-
-# {0} = numbers of kills divided by the number of deaths (kill-death ratio)
-match.stats.kd.concise = K/D: {0}
-
 # {0} = a player name
 # {1} = an amount of blocks
 match.stats.bowshot = Longest Shot: {1} blocks by {0}
@@ -83,20 +79,24 @@ match.stats.bowshot = Longest Shot: {1} blocks by {0}
 # {1} = an amount of damage
 match.stats.damage = Damage: {1} by {0}
 
-# {0} = the number of damage done
-# {1} = the number of damage done with a bow
-# {2} = the number of damage taken
-match.stats.damage.concise = Damage Dealt (Bow) / Received: {0} ({1}) / {2}
+# {0} = an amount of damage
+# {1} = an amount of damage
+match.stats.damage.dealt = Damage Dealt (Bow): {0} ({1})
 
-# {0} = the number of bow shots taken
-# {1} = the number representing someones accuracy(e.g 35%)
-match.stats.bow.concise = Bow Shots / Accuracy: {0} / {1}%
+# {0} = an amount of damage
+match.stats.damage.received = Damage Received: {0}
+
+# {0} = number of arrows hit
+# {1} = number of arrows shot
+# {2} = accuracy represented as a percentage
+match.stats.bow = Bow Hits: {0} / {1} ({2})
+
 
 # {0} = the number of flags captured
 match.stats.flagsCaptured.concise = Flags Captured: {0}
 
 # {0} = a number representing the duration of the capture
-match.stats.flaghold.concise = Longest Flag Capture: {0}
+match.stats.flaghold.concise = Longest Flag Hold: {0}
 
 # {0} the amount of monument pieces broken(number)
 match.stats.broken.concise = Monument Blocks Broken: {0}
