--- a/util/src/main/i18n/templates/misc.properties
+++ b/util/src/main/i18n/templates/misc.properties
@@ -19,12 +19,6 @@ misc.list.middle = {0}, {1}
 misc.list.end = {0}, and {1}
 
 # {0} = "1"
-misc.millisecond = {0} millisecond
-
-# {0} = number of milliseconds
-misc.milliseconds = {0} milliseconds
-
-# {0} = "1"
 misc.second = {0} second
 
 # {0} = number of seconds
@@ -33,20 +27,44 @@ misc.seconds = {0} seconds
 # {0} = "1"
 misc.minute = {0} minute
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 misc.minutes = {0} minutes
 
 # {0} = "1"
 misc.hour = {0} hour
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 misc.hours = {0} hours
 
 # {0} = "1"
 misc.day = {0} day
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0} days
+
+# {0} = "1"
+misc.week = {0} week
+
+# {0} = number of weeks (2-3)
+misc.weeks = {0} weeks
+
+# {0} = "1"
+misc.month = {0} month
+
+# {0} = number of months (2-11)
+misc.months = {0} months
+
+# {0} = "1"
+misc.year = {0} year
+
+# {0} = number of years
+misc.years = {0} years
+
+# less than a second
+misc.now = a moment
+
+# more than 3 years
+misc.eon = a long time
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = {0} ago
